[gd_scene load_steps=8 format=3 uid="uid://ciffgv0523h7i"]

[ext_resource type="Script" path="res://scripts/shop/shop_menu.gd" id="1_3aclf"]
[ext_resource type="PackedScene" uid="uid://cbmnmwj2vstpb" path="res://roller.tscn" id="2_8bmb8"]
[ext_resource type="Resource" uid="uid://dxdhe2hfg3xkh" path="res://configs/ba.tres" id="3_yuqr3"]
[ext_resource type="Resource" uid="uid://bvatwq3ein76w" path="res://configs/brian.tres" id="4_waxl0"]
[ext_resource type="Resource" uid="uid://chk1mf08kk75o" path="res://configs/bob.tres" id="5_sox1c"]
[ext_resource type="Resource" uid="uid://bjqpb43ssnpe8" path="res://configs/dave.tres" id="6_53mxs"]
[ext_resource type="Resource" uid="uid://dn5ihxlupxxa6" path="res://configs/sara.tres" id="7_lw3c8"]

[node name="Shop Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -752.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3aclf")

[node name="Background" type="ColorRect" parent="."]
self_modulate = Color(0.596078, 0.6, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitlePanel" type="Panel" parent="Menu"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Title" type="Label" parent="Menu/TitlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BodyPanel" type="VBoxContainer" parent="Menu"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="PointsLabel" type="Label" parent="Menu/BodyPanel"]
layout_mode = 2
text = "Points: 0"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/BodyPanel"]
layout_mode = 2

[node name="CountLabel" type="Label" parent="Menu/BodyPanel/HBoxContainer"]
layout_mode = 2
text = "Dice Sets: 000"

[node name="BuyButton" type="Button" parent="Menu/BodyPanel/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Buy"

[node name="CostLabel" type="Label" parent="Menu/BodyPanel/HBoxContainer"]
layout_mode = 2
text = "Price: 0"

[node name="ChipsLabel" type="Label" parent="Menu/BodyPanel"]
layout_mode = 2
text = "Chips: 0"

[node name="Roller - BA" parent="Menu/BodyPanel" instance=ExtResource("2_8bmb8")]
layout_mode = 2
config = ExtResource("3_yuqr3")

[node name="Roller - Brian" parent="Menu/BodyPanel" instance=ExtResource("2_8bmb8")]
layout_mode = 2
config = ExtResource("4_waxl0")
id = 1

[node name="Roller - Bob" parent="Menu/BodyPanel" instance=ExtResource("2_8bmb8")]
layout_mode = 2
config = ExtResource("5_sox1c")
id = 2

[node name="Roller - Dave" parent="Menu/BodyPanel" instance=ExtResource("2_8bmb8")]
layout_mode = 2
config = ExtResource("6_53mxs")
id = 3

[node name="Roller - Sara" parent="Menu/BodyPanel" instance=ExtResource("2_8bmb8")]
layout_mode = 2
config = ExtResource("7_lw3c8")
id = 4

[connection signal="pressed" from="Menu/BodyPanel/HBoxContainer/BuyButton" to="." method="on_buy_button_pressed"]
[connection signal="on_roll" from="Menu/BodyPanel/Roller - BA" to="." method="on_roll"]
[connection signal="on_roll" from="Menu/BodyPanel/Roller - Brian" to="." method="on_roll"]
[connection signal="on_roll" from="Menu/BodyPanel/Roller - Bob" to="." method="on_roll"]
[connection signal="on_roll" from="Menu/BodyPanel/Roller - Dave" to="." method="on_roll"]
[connection signal="on_roll" from="Menu/BodyPanel/Roller - Sara" to="." method="on_roll"]
